add check for eapol_test

--- a/command.cfg
+++ b/command.cfg
@@ -3,8 +3,34 @@ object CheckCommand "systemd" {
   
   arguments = {
 		"-v" = {
-			set_if = "$systemd_verbose"
+			set_if = "$systemd_verbose$",
 			description = "Show details for debugging"
+		}
+	}
+}
+
+object CheckCommand "eapol_test" {
+	command = [ "/usr/local/bin/check_eapol_test" ]
+
+	arguments = {
+		"-v" = {
+			set_if = "$eapol_test_verbose$",
+			description = "Show details for debugging"
+		},
+		"-H" = {
+			value = "$eapol_test_host$"
+		},
+		"-s" = {
+			value = "$eapol_test_secret$"
+		},
+		"-p" = {
+			value = "$eapol_test_port$"
+		},
+		"-c" = {
+			value = "$eapol_test_config$"
+		},
+		"-f" = {
+			set_if = "$eapol_test_should_fail$"
 		}
 	}
 }
